testdata/baselines/reference/submodule/compiler/typeReferenceDirectiveWithTypeAsFile.errors.txt
/a.ts(1,1): error TS2304: Cannot find name 'a'.


==== /a.ts (1 errors) ====
    a;
    ~
!!! error TS2304: Cannot find name 'a'.
    
==== /node_modules/phaser/types/phaser.d.ts (0 errors) ====
    declare const a: number;
    